# School_n_Mephi

./: README.md
11кл/Проект - тг-бот ''оповещение о заражении''/: Students.csv  Students.xlsx  Timetable.csv  Timetable.xlsx  main.py  Обзор темы_1.docx  Отчёт для пс16.01.23.docx  Постер.pptx  Пример финального отчёта.docx  Тезисы.docx  Тезисы2.docx  Текст для постера.docx  Текст к проекту.docx  Текст к проекту2.docx
2021-2022 (10кл)/10кл-Проектная деятельность. Логические схемы. 2021-2022/: Диаграмма_Вейча.py  Считывание функции, вывод таблицы истинности.py  Тезисы проекта (снова).docx
2021-2022 (10кл)/Dz_september(python)/: Поляков_26-22_метод-Корзинки.py  Поляков_26-22_своё-решение.py  Поляков_26-26_метод-Корзинки.py  Поляков_26-26_своё-решение.py  Поляков_27-25_метод-Корзинки.py  Поляков_27-26_метод-Корзинки.py
2021-2022 (10кл)/some_python_programs/: Как сделать в строке первую букву большой.py  Перевод чисел по системам счисления.py  Решение квадратных уравнений.txt  Решение_кв_уравн.py  Тесты.py  без имени.py  тест программы.py
8кл(совместный проект) ДЗ на апрель 2020 по информатике/: Вид_треугольника+S+P.py  Вид_треугольника+S+P.rtf  Вид_четырёхугольника.py  Вид_четырёхугольника.rtf  Выпуклость.py  Если_отрезок.py  Если_отрезок.rtf  Начало.py  Начало.rtf  Определение_фигуры.py  Определение_фигуры.rtf  Параллельность.py  Параллельность.rtf  Расположение точек по четвертям.py  Расположение точек по четвертям.rtf  Расстояние между точками.py  Расстояние между точками.rtf  Уравнение прямой.py  Уравнение прямой.rtf
Assembler (sem4)/lab1 (арифметическое выражение)/: code.s  example.s
Assembler (sem4)/lab2 (матрица)/: search_max.s
Assembler (sem4)/свои примеры/: cube_32bit.s  cube_double-imul.s  cube_three-split.s  division.s  square.s
DS&A (sem1)/ekz/: whydoesntwork.c
DS&A (sem1)/lab4a (деревья)/: тайирование.xlsx
DS&A (sem1)/lab4b (Сбалансированные деревья)/: CMakeLists.txt
DS&A (sem1)/lab4b (Сбалансированные деревья)/code/: tree.c
DS&A (sem1)/lab5 (графы)/: CMakeLists.txt
DS&A (sem1)/lab5 (графы)/code/: graph.h  input.c  mylib.h  queue.h  visual.c
DS&A (sem1)/Кр3 Деревья+графы (подготовка)/: Bellman.c.txt
DS&A (sem2)/lab2 (очередь)/attempt1/: CMakeLists.txt  main.c
DS&A (sem2)/Кр3 Деревья+графы (подготовка)/: Dejkstra(better).c.txt  Dejkstra.c.txt
DS&A/kr1/: Условия (по памяти).docx
DS&A/lab2 (очередь)/: CMakeLists.txt
DS&A/lab2 (очередь)/attempt1/: mylibrary.h  readme.txt
DS&A/lab2 (очередь)/code/: reception.c
DS&A/lab3a (таблица)/: CMakeLists.txt
DS&A/lab3a (таблица)/code/: job.c  mylib.h  table.c
DS&A/lab3b (хэш-таблицы)/: CMakeLists.txt
DS&A/lab3b (хэш-таблицы)/code/: hash.c  input.c  main.c  table.c
DS&A/lab4a (деревья)/: CMakeLists.txt
DS&A/lab4a (деревья)/дерево №2/: job.c  mylib.h  tree.h
DS&A/lab4a (деревья)/дерево №3/: dialog.c  mylib.h  queue.c
DS&A/lab4b (Сбалансированные деревья)/: таймирование.xlsx
Informatics (sem1)/hw1/: code.c.txt  Книга1.xlsx
Informatics (sem1)/hw2/: code.c.txt  Лист Microsoft Excel.xlsx
Informatics (sem1)/hw3_н/: Признание.txt
Informatics (sem1)/kr2/: 1funny.c  2funny.c  funny.c  funny.h  main1.c  main2.c
Informatics (sem1)/lab1 (общие делители двух чисел)/: isComDiv.json  main.json  prog1.c.txt  swap.json  отчёт.docx
Informatics (sem1)/lab2 (exp чз ряд Тейлора)/: отчёт.docx
Informatics (sem1)/lab3 (массивы и динамическая память)/: code.c  отчёт.docx
Informatics (sem1)/lab4 (строки)/: отчёт.docx
Informatics (sem1)/lab5 (списки)/: Книга1.xlsx  отчёт.docx
Informatics (sem1)/lab6_nf/: code6_notfinised.c  code6_notfull.c  tests.txt
Informatics (sem1)/Полезное здесь/: realine (lab5).c  полезное здесь.txt
Informatics (sem1)/гайды (Си)/: README.txt  cmake.txt  гайд по фришкам.txt  действия с сервером.txt  другие гайды.txt
OOP (sem3)/lab2/: CMakeLists.txt
OOP (sem3)/lab2 (троичные числа из 0 1 X)/: РИДМИСРОЧНО.txt
OOP (sem3)/lab2/code/: dialogue.cpp  main.cpp
OOP (sem3)/lab2/doc/: simple.hpp
OOP (sem3)/lab2/gtest/: complex-test.cpp  complex.cpp.gcov  simple-test.cpp  simple.cpp.gcov
OOP (sem3)/lab3/: 3В-TW_uml.txt  CMakeLists.txt  docm.bat  dogcc.bat  graphic_attackDefBuilds.xlsx  graphic_moveEnemy.xlsx  makenorm.bat
OOP (sem3)/lab3 (игра Tower Defense)/: 3В-TW_uml.drawio  makethread.bat  myland.txt  template_land.txt  вариант_сложный(мой).txt
OOP (sem3)/lab3/cpp/: BuildAttack.cpp  Castle.cpp  Cell.cpp  Field.cpp  Lair.cpp  Landscape.cpp  PriceTable.cpp
OOP (sem3)/lab3/doc/: BuildAttack.hpp  Castle.hpp  Cell.hpp  DefBuild.hpp  Enemy.hpp  Game.hpp  IBuildAttacker.hpp  IControlBuildAttacks.hpp  IControlLives.hpp  IEnemyAttacker.hpp  IGameControl.hpp  Lair.hpp  MagicTower.hpp  PriceTable.hpp  Road.hpp  Tower.hpp
OOP (sem3)/lab3/gtest/: BuildAttack-test.cpp  Cell-test.cpp  DefBuild-test.cpp  EffectAttack-test.cpp  Field-test.cpp  Lair-test.cpp  MagicTower-test.cpp  MagicTrap-test.cpp  TestForDefBuild.hpp  Tower-test.cpp
OOP (sem3)/lab3/gtest/gcov/: Castle.cpp.gcov  Cell.cpp.gcov  DefBuild.cpp.gcov  Enemy.cpp.gcov  Field.cpp.gcov  Landscape-test.cpp  MagicTower.cpp.gcov
OOP (sem3)/lab3/gtest/just a test --Land+Game/: Game.cpp.gcov  testGame-main.cpp
OOP (sem3)/lab3/hpp/: DefBuild.hpp  EffectAttack.hpp  Landscape.hpp  MagicTower.hpp  MagicTrap.hpp  PriceTable.hpp
OOP (sem3)/lab3/interfaces/: IBuildAttacker.hpp  IControlBuildAttacks.hpp  IControlLives.hpp  IControlMyselfOnLand.hpp  IControlSpawns.hpp  IDamagable.hpp  IGameControl.hpp
OOP (sem3)/lab3/maps/: map_50x50_bad.txt  mymap_50x50_straight.txt  mymap_basic.txt
OOP (sem3)/lab3/multithread/: Enemy.hpp  Landscape.hpp
OOP (sem3)/lab3/mvc/: Game.cpp  Game.hpp  main.cpp
OOP (sem3)/lab3/notwhatiwant_thread/: Game.hpp  Landscape.cpp  Landscape.hpp  README.txt
OOP (sem3)/lab3/шаблон_двумер (начатая идея)/: Matrix.cpp
OOP (sem3)/lab3/шаблон_одномер/: Matrix.hpp
OOP (sem3)/подготовка к экз/: 2.cpp  3.txt  4.txt
Pascal_programs (7кл)/: lol.pas
Python (sem2)/: readme.txt
Python (sem2)/lab-10-1/: README.md  calc.py  compf.py  requirements.txt  setup.cfg  stack.py
(+348 files in other folders)
